# esp_wifi_config

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  LICENSE  MIGRATION.md  README.md  future-enhancements.md  idf_component.yml  library.json
.github/workflows/: build-docs.yml  build-examples.yml  publish-component.yml  publish-platformio.yml
deploy/: deploy.sh  ecosystem.config.js  nginx-configwifi.com.conf  webhook.js
docs/: API.md
examples/basic/: CMakeLists.txt  README.md
examples/basic/main/: CMakeLists.txt  idf_component.yml  main.c
examples/with_ble/: CMakeLists.txt  sdkconfig.defaults
examples/with_ble/main/: idf_component.yml  main.c
examples/with_ble_deinit/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/with_ble_deinit/main/: CMakeLists.txt  main.c
examples/with_cli/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/with_cli/main/: main.c
examples/with_improv/: CMakeLists.txt  sdkconfig.defaults
examples/with_improv/main/: CMakeLists.txt  idf_component.yml  main.c
examples/with_webui/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/with_webui/main/: main.c
examples/with_webui_customize/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/with_webui_customize/main/: idf_component.yml  main.c
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: NetworkList.css  NetworkList.tsx  SavedNetworks.css  SavedNetworks.tsx  StatusCard.css  StatusCard.tsx
frontend/src/components/ui/: Button.css  Button.tsx  Card.css  Card.tsx
frontend/src/styles/: base.css  utilities.css  variables.css
include/: esp_wifi_config.h  esp_wifi_manager.h
src/: esp_wifi_config.c  esp_wifi_config_ap.c  esp_wifi_config_ble.c  esp_wifi_config_ble_bluedroid.c  esp_wifi_config_ble_int.h  esp_wifi_config_ble_nimble.c  esp_wifi_config_bus.c  esp_wifi_config_cli.c  esp_wifi_config_dns.c  esp_wifi_config_http.c  esp_wifi_config_improv.c  esp_wifi_config_improv.h  esp_wifi_config_improv_ble.c  esp_wifi_config_improv_serial.c  esp_wifi_config_mdns.c  esp_wifi_config_network.c  esp_wifi_config_nvs.c  esp_wifi_config_priv.h  esp_wifi_config_prov_ble.c  esp_wifi_config_webui.c  esp_wifi_manager.c  esp_wifi_manager_ap.c  esp_wifi_manager_ble.c  esp_wifi_manager_ble_bluedroid.c  esp_wifi_manager_ble_int.h  esp_wifi_manager_ble_nimble.c  esp_wifi_manager_bus.c  esp_wifi_manager_cli.c  esp_wifi_manager_dns.c  esp_wifi_manager_http.c  esp_wifi_manager_improv.c  esp_wifi_manager_improv.h  esp_wifi_manager_improv_ble.c  esp_wifi_manager_improv_serial.c  esp_wifi_manager_network.c  esp_wifi_manager_nvs.c  esp_wifi_manager_priv.h  esp_wifi_manager_webui.c
tools/: test_server.py
tools/test_server/: README.md  config.sample.json  test_server.py
tools/wifi_ble_cli/: README.md  wifi_ble_cli.py
website/: docusaurus.config.ts  package-lock.json  package.json
website/docs/: ai-integration-guide.md  examples.md  getting-started.md  migration.md  overview.md
website/docs/api/: _category_.json  ble-protocol.md  c-api.md  cli-commands.md  kconfig.md  rest-api.md
website/docs/examples/: _category_.json  basic.md  with-ble.md  with-cli.md  with-improv.md  with-webui-customize.md  with-webui.md
website/docs/guides/: _category_.json  custom-variables.md  custom-webui.md  esp-bus-events.md  http-server-sharing.md  multi-network.md
website/docs/provisioning/: _category_.json  ble-gatt.md  improv-wifi.md  modes.md  softap-captive-portal.md
website/scripts/: generate-llms-txt.mjs
website/static/: llms-onboarding.txt
